# s3post.rs

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  README.md  build.sh  s3post.json.example  s3post.py
.cargo/: config
src/: main.rs
