[package]
edition     = "2018"
name        = "s3post"
version     = "0.1.21"
authors     = ["Joseph Kordish <joe@unicornclouds.com>"]
description = "Post gzip compressed logs to S3"
homepage    = "https://github.com/jkordish/s3post.rs"
repository  = "https://github.com/jkordish/s3post.rs"
readme      = "README.md"
license     = "The MIT License (MIT)"
keywords    = [
  "aws",
  "logs",
  "syslog"
]

[[bin]]
name = "s3post"
path = "src/main.rs"

[dependencies]
slog         = "*"
slog-stdlog  = "*"
slog-term    = "*"
slog-async   = "*"
flate2       = { version = "*", features = ["rust_backend"], default-features = false }
crossbeam    = "*"
chrono       = "*"
get_if_addrs = "*"
walkdir      = "*"
serde_json   = "*"
serde        = "*"
serde_derive = "*"
rusoto_core  = { version="0.35", default_features=false, features=["rustls"] }
rusoto_s3    = { version="0.35", default_features=false, features=["rustls"] }
rusoto_sts   = { version="0.35", default_features=false, features=["rustls"] }
rusoto_credential = "*"
cadence      = "*"
elapsed      = "*"

[profile.release]
codegen-units    = 1
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
panic            = 'abort'
incremental      = false
overflow-checks  = false
