[package]
edition     = "2018"
name        = "s3post"
version     = "0.1.22"
authors     = ["Joseph Kordish <joe@unicornclouds.com>"]
description = "Post gzip compressed logs to S3"
homepage    = "https://github.com/jkordish/s3post.rs"
repository  = "https://github.com/jkordish/s3post.rs"
readme      = "README.md"
license     = "The MIT License (MIT)"
keywords    = [
  "aws",
  "logs",
  "syslog"
]

[[bin]]
name = "s3post"
path = "src/main.rs"

[dependencies]
slog              = "2.4.1"
slog-stdlog       = "3.0.2"
slog-term         = "2.4.0"
slog-async        = "2.3.0"
flate2            = { version="1.0.6", features=["rust_backend"], default-features=false }
crossbeam-utils   = { version="0.6.3", default_features=false, features=["nightly"] }
chrono            = "0.4.6"
get_if_addrs      = "0.5.3"
walkdir           = "2.2.7"
serde_json        = "1.0.33"
serde             = { version="1.0.82", default-features=false, features = ['derive'] }
rusoto_core       = { version="0.36.0", default_features=false, features=["rustls"] }
rusoto_s3         = { version="0.36.0", default_features=false, features=["rustls"] }
rusoto_sts        = { version="0.36.0", default_features=false, features=["rustls"] }
rusoto_credential = "0.15.0"
cadence           = "0.16.0"

[profile.release]
codegen-units    = 1
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
panic            = 'abort'
incremental      = false
overflow-checks  = false
