[package]
edition     = "2018"
name        = "s3post"
version     = "0.1.22"
authors     = ["Joseph Kordish <joe@unicornclouds.com>"]
description = "Post gzip compressed logs to S3"
homepage    = "https://github.com/jkordish/s3post.rs"
repository  = "https://github.com/jkordish/s3post.rs"
readme      = "README.md"
license     = "The MIT License (MIT)"
keywords    = [
  "aws",
  "logs",
  "syslog"
]

[[bin]]
name = "s3post"
path = "src/main.rs"

[dependencies]
slog              = "2.5.2"
slog-stdlog       = "4.0.0"
slog-term         = "2.4.2"
slog-async        = "2.3.0"
flate2            = { version = "1.0.13", default-features = false, features = ["rust_backend"] }
crossbeam-utils   = { version = "0.7.0", default_features = false, features = ["nightly"] }
chrono            = "0.4.10"
get_if_addrs      = "0.5.3"
walkdir           = "2.3.1"
serde_json        = "1.0.44"
serde             = { version = "1.0.104", default-features = false, features = ['derive'] }
rusoto_core       = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_s3         = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_sts        = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_credential = "0.42.0"
cadence           = "0.19.1"

[profile.release]
codegen-units    = 1
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
panic            = 'abort'
incremental      = false
overflow-checks  = false
